RESOLVED FIXED234755
Non-unified build fixes, end-of-year 2021 edition
https://bugs.webkit.org/show_bug.cgi?id=234755
Summary Non-unified build fixes, end-of-year 2021 edition
Adrian Perez
Reported 2021-12-30 12:58:20 PST
🎆️
Attachments
Patch (7.79 KB, patch)
2021-12-30 13:03 PST, Adrian Perez
no flags
Adrian Perez
Comment 1 2021-12-30 13:03:12 PST
EWS
Comment 2 2021-12-30 14:34:37 PST
Committed r287486 (245621@main): <https://commits.webkit.org/245621@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448105 [details].
Radar WebKit Bug Importer
Comment 3 2021-12-30 14:35:18 PST
Note You need to log in before you can comment on or make changes to this bug.