Source/WebCore/inspector/InspectorFrontendHost.cpp
@@ -56,6 +56,7 @@
 #include "Page.h"
 #include "PagePasteboardContext.h"
 #include "Pasteboard.h"
+#include "ScriptController.h"
 #include "Settings.h"
 #include "SystemSoundManager.h"
 #include "UserGestureIndicator.h"
