Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp
@@ -27,6 +27,9 @@
 #include "InlineDisplayLineBuilder.h"
 
 #if ENABLE(LAYOUT_FORMATTING_CONTEXT)
+
+#include "LayoutBoxGeometry.h"
+
 namespace WebCore {
 namespace Layout {
 
